plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'org.northcoders.recordshopapp'
    compileSdk 34

    defaultConfig {
        applicationId "org.northcoders.recordshopapp"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        buildFeatures {
            dataBinding true
        }
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    //    Retrofit - HTTP dependency to make calls
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    //    MutableLiveData - data wrapper class, observes changing data
    runtimeOnly 'androidx.lifecycle:lifecycle-livedata:2.8.5'
    //    GSON - data binding dependency which converts data to Java object (like Jackson)
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    //    HTTPLoggingInterceptor - Logs HTTP requests, used for debugging
    implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")

    //    Image Loading
    implementation 'com.github.bumptech.glide:glide:4.16.0'
}